--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,5 @@
-#Tue Jul 15 22:58:40 CDT 2008
+#Do not edit app.grails.* properties, they may change automatically. DO NOT put application configuration in here, it is not the right place!
+#Wed Jul 16 17:26:18 CDT 2008
 app.version=0.1
 app.servlet.version=2.4
 app.grails.version=1.0.3
