--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
-#Sat Sep 13 23:50:30 CDT 2008
-app.version=0.2
+#Sat Oct 25 00:06:38 CDT 2008
+app.version=0.3-SNAPSHOT
 app.servlet.version=2.4
 app.grails.version=1.0.3
 app.name=coetus
