upgrade to grails 1.0.4

--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,6 @@
-#Sat Oct 25 00:06:38 CDT 2008
+#Do not edit app.grails.* properties, they may change automatically. DO NOT put application configuration in here, it is not the right place!
+#Wed Dec 10 22:23:49 CST 2008
 app.version=0.3-SNAPSHOT
 app.servlet.version=2.4
-app.grails.version=1.0.3
+app.grails.version=1.0.4
 app.name=coetus
